Add GetArtist Method
