# api/internal/gen/api.gen.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package gen
 
 import (
@@ -16,8 +16,9 @@ import (
 
 // Artist defines model for Artist.
 type Artist struct {
-	Id   string `json:"id"`
-	Name string `json:"name"`
+	Id     string  `json:"id"`
+	Images []Image `json:"images"`
+	Name   string  `json:"name"`
 }
 
 // Error defines model for Error.
@@ -50,12 +51,18 @@ type PlaylistTrack struct {
 	Track   Track  `json:"track"`
 }
 
+// SimplifiedArtist defines model for SimplifiedArtist.
+type SimplifiedArtist struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
+
 // Track defines model for Track.
 type Track struct {
-	Artists    []Artist `json:"artists"`
-	DurationMs int      `json:"duration_ms"`
-	Id         string   `json:"id"`
-	Name       string   `json:"name"`
+	Artists    []SimplifiedArtist `json:"artists"`
+	DurationMs int                `json:"duration_ms"`
+	Id         string             `json:"id"`
+	Name       string             `json:"name"`
 }
 
 // TrackPage defines model for TrackPage.
@@ -78,6 +85,11 @@ type InternalError = Error
 // Unauthorized defines model for Unauthorized.
 type Unauthorized = Error
 
+// GetArtistParams defines parameters for GetArtist.
+type GetArtistParams struct {
+	Secret AuthSecret `form:"secret" json:"secret"`
+}
+
 // GetPlaylistParams defines parameters for GetPlaylist.
 type GetPlaylistParams struct {
 	Secret AuthSecret `form:"secret" json:"secret"`
@@ -85,6 +97,9 @@ type GetPlaylistParams struct {
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// Get Arist Metadata
+	// (GET /api/artist/{artist_id})
+	GetArtist(w http.ResponseWriter, r *http.Request, artistId string, params GetArtistParams)
 	// Get Playlist Metadata + Tracks
 	// (GET /api/playlist/{playlist_id})
 	GetPlaylist(w http.ResponseWriter, r *http.Request, playlistId string, params GetPlaylistParams)
@@ -93,6 +108,12 @@ type ServerInterface interface {
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
 
 type Unimplemented struct{}
+
+// Get Arist Metadata
+// (GET /api/artist/{artist_id})
+func (_ Unimplemented) GetArtist(w http.ResponseWriter, r *http.Request, artistId string, params GetArtistParams) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
 
 // Get Playlist Metadata + Tracks
 // (GET /api/playlist/{playlist_id})
@@ -108,6 +129,49 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(http.Handler) http.Handler
+
+// GetArtist operation middleware
+func (siw *ServerInterfaceWrapper) GetArtist(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "artist_id" -------------
+	var artistId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "artist_id", chi.URLParam(r, "artist_id"), &artistId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "artist_id", Err: err})
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetArtistParams
+
+	// ------------- Required query parameter "secret" -------------
+
+	if paramValue := r.URL.Query().Get("secret"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "secret"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "secret", r.URL.Query(), &params.Secret)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "secret", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetArtist(w, r, artistId, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
 
 // GetPlaylist operation middleware
 func (siw *ServerInterfaceWrapper) GetPlaylist(w http.ResponseWriter, r *http.Request) {
@@ -266,6 +330,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	}
 
 	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/api/artist/{artist_id}", wrapper.GetArtist)
+	})
+	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/api/playlist/{playlist_id}", wrapper.GetPlaylist)
 	})
 
@@ -275,6 +342,42 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 type InternalErrorJSONResponse Error
 
 type UnauthorizedJSONResponse Error
+
+type GetArtistRequestObject struct {
+	ArtistId string `json:"artist_id"`
+	Params   GetArtistParams
+}
+
+type GetArtistResponseObject interface {
+	VisitGetArtistResponse(w http.ResponseWriter) error
+}
+
+type GetArtist200JSONResponse Artist
+
+func (response GetArtist200JSONResponse) VisitGetArtistResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetArtist401JSONResponse struct{ UnauthorizedJSONResponse }
+
+func (response GetArtist401JSONResponse) VisitGetArtistResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetArtist500JSONResponse struct{ InternalErrorJSONResponse }
+
+func (response GetArtist500JSONResponse) VisitGetArtistResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(500)
+
+	return json.NewEncoder(w).Encode(response)
+}
 
 type GetPlaylistRequestObject struct {
 	PlaylistId string `json:"playlist_id"`
@@ -314,6 +417,9 @@ func (response GetPlaylist500JSONResponse) VisitGetPlaylistResponse(w http.Respo
 
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
+	// Get Arist Metadata
+	// (GET /api/artist/{artist_id})
+	GetArtist(ctx context.Context, request GetArtistRequestObject) (GetArtistResponseObject, error)
 	// Get Playlist Metadata + Tracks
 	// (GET /api/playlist/{playlist_id})
 	GetPlaylist(ctx context.Context, request GetPlaylistRequestObject) (GetPlaylistResponseObject, error)
@@ -346,6 +452,33 @@ type strictHandler struct {
 	ssi         StrictServerInterface
 	middlewares []StrictMiddlewareFunc
 	options     StrictHTTPServerOptions
+}
+
+// GetArtist operation middleware
+func (sh *strictHandler) GetArtist(w http.ResponseWriter, r *http.Request, artistId string, params GetArtistParams) {
+	var request GetArtistRequestObject
+
+	request.ArtistId = artistId
+	request.Params = params
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.GetArtist(ctx, request.(GetArtistRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetArtist")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(GetArtistResponseObject); ok {
+		if err := validResponse.VisitGetArtistResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
 }
 
 // GetPlaylist operation middleware
